# qso-fabric

./: .gitignore  AGENTS.md  Makefile  README.md  codex_orchestrator.py  docker-compose.yml  main.py  mapl_main.py  pyproject.toml  tasks.yaml
agents/: base.py  experimentalist.py  programmer.py  synthesizer.py  theorist.py  verifier.py
api/: README.md
autonomous_investigation_ai/: README.md  requirements.txt
cli/: codex_bridge.py  mapl_cli.py  task_dispatcher.py
config/: crypto_config.json  qso_config.json  server_config.json  snapshot_config.json
context_engine/: cluster_router.py  context_loader.py  context_registry.py  memory_index.json
demo/: high_dim_qsafe_sphere.html  three_webxr_scene_qso.html
docs/: ai_native_skill_stack.md  architecture.md  benchmarks.html  deployment_target.md  examples.md  federation_design.md  index.html  investigative-triage-summary.json  investigative-triage.html  mcp_integration.md  mesh_handoff_contract.md  qff_spec.md  qso_api.md  qso_fabric_edu_apc.md  qso_structural_constitution.md  qso_xr_program_management.md  quantum_network_implementation_matrix.md  quantum_network_object_full_blueprint.md  quantum_network_object_spec.md  snapshot_nomenclature.md  soc2_bridge_controls.md  soc2_socket_controls.md  sovereign_identity_pilot_build_sheet.md  submission_readiness.md  wiki-demo.html
entanglement_graph/: entanglement_graph.py  entanglement_node.py
execution_graph/: dag_executor.py  graph_builder.py  task_scheduler.py
gdml/: README.md  service.py
graph_reasoning_engine/: README.md  requirements.txt
identity_layer/: crypto_bindings.py  identity_registry.py  iris_hashing.py
investigation_ai/: README.md
knowledge_graph/: entity_extractor.py  graph_query.py  graph_schema.py  relation_builder.py
mapl/: executor.py  grammar.ebnf  parser.py  tokenizer.py
mcp-qso-edu/: README.md
mcp_qso_edu/: __init__.py  apc_fabric_edu.py  chat_tools.py  conversation_bridge.py  crypto.py  experiment_isolation.py  fork.py  permissions.py  protocol_server.py  rate_limiter.py  sandbox_engine.py  sandbox_persistence.py  schema_registry.py  server.py  summarizer.py  tutorial_engine.py  upstream_apps.py
mcp_server/: node_sync.py  resource_router.py  server_core.py  subscription_manager.py  tool_api.py
national_investigation_ai/: README.md  run_simulation.py
oc_parcel_intelligence_engine/: .env.example  README.md  requirements.txt
ocrecorder_pipeline/: .env.example  README.md  pyproject.toml
ocrecorder_pipeline/data/exports/: network_cluster_report.csv  parcel_alert_table.csv  parcel_scores.csv  parcel_stats.csv  run_summary.json  surname_anomaly_table.csv  surname_apn_density_matrix.csv  title_projection.graphml
ocrecorder_pipeline/data/exports/title_chains/: title_chain_405_112_17.csv  title_chain_405_112_18.csv  title_chain_405_112_19.csv
ocrecorder_pipeline/data/normalized/: normalized_records.csv
ocrecorder_pipeline/data/parsed/: sample_records.csv
ocrecorder_pipeline/manifests/: query_slices.json
ocrecorder_pipeline/notebooks/: 01_profile_surnames.ipynb  02_heatmaps.ipynb  03_title_chains.ipynb  04_rapid_conveyance.ipynb
ocrecorder_pipeline/src/: runner.py
ocrecorder_pipeline/src/acquire/: client.py  resume.py  slicer.py
ocrecorder_pipeline/src/analytics/: parcel_scores.py  rapid_conveyance.py  surname_stats.py  title_chain.py
ocrecorder_pipeline/src/graph/: build_graph.py  communities.py
ocrecorder_pipeline/src/normalize/: apn.py  entities.py  names.py
ocrecorder_pipeline/src/parse/: detail_parser.py  results_parser.py
ocrecorder_pipeline/src/viz/: heatmaps.py  network_export.py  parcel_timeline.py
ocrecorder_pipeline/tests/: test_analytics.py  test_normalize_names.py  test_slicer.py
outputs/: equation_renderer.py  (+3 more)
(+759 files in other folders)
