[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrecorder-pipeline"
version = "0.1.0"
description = "Resumable recorder analytics scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "networkx>=3.0",
]

[project.optional-dependencies]
acquire = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ocrecorder = "runner:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["runner"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["acquire*", "parse*", "normalize*", "analytics*", "graph*", "viz*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
